src/test/resources/parser/valid/binary/arithmetic/optimisations/subtractionZero.sbsc
a = 4;

return a - 0 == 4;