src/test/resources/parser/invalid/assignment/noMacroAssignment.sbsc
forEach = 4;

return false;